--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "start": "nodemon index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2",
+    "selenium-webdriver": "^4.16.0",
+    "uuid": "^9.0.1"
+  }
 }
